# apertium-sme-nob

./: .gitattributes  .gitignore  .travis.yml  2translations-test.html  ACKNOWLEDGEMENTS  AUTHORS  CITATION.cff  Makefile.am  NRKnews_sme2nob.html  PROBLEMS  README  TODO  apertium-sme-nob.nob.dix  apertium-sme-nob.nob.lsx  apertium-sme-nob.nob.prefs.rlx  apertium-sme-nob.sme-nob.arx  apertium-sme-nob.sme-nob.dix  apertium-sme-nob.sme-nob.lex  apertium-sme-nob.sme-nob.lsx  apertium-sme-nob.sme-nob.mor.rlx  apertium-sme-nob.sme-nob.rlx  apertium-sme-nob.sme-nob.rtx  apertium-sme-nob.sme-nob.syn.rlx  apertium-sme-nob.sme-nob.t1x  apertium-sme-nob.sme-nob.t2x  apertium-sme-nob.sme-nob.t3x  apertium-sme-nob.sme-nob.t4x  apertium-sme-nob.sme-nob.val  apertium-sme-nob.sme.lexc  apertium-sme-nob.sme.twol  autogen.sh  check_mt-otpt.py  configure.ac  gt2apertium.cg3r  lexchoicebil.xsl  libltpy.cpp  modes.xml  old-pending-tests.sh  old-regression-tests.sh  pending-tests.sh  (+11 more)
WER/: Makefile  README  dubestemmer.nob  dubestemmer.sme  eu.nob  eu.sme  gonagas.nob  gonagas.sme  make-paste.sh  norga.nob  norga.sme  rikssamling.nob  rikssamling.sme  safrika.nob  safrika.sme  warhol.nob  warhol.sme  wdiff-to-html.sh  ww2.nob  ww2.sme
dev/: MoreNewLemmas  NRKnews_mt.txt  README  README.md  Setningstyper.docx  abbr.todo.dix  about-lemma_go.txt  about-refl_pron.txt  about_refl_pron.txt  analyse-all-stages.sh  analyse-bidix.sh  apertium-sme-nob.sme-nob.lrx  bidix-abbr.todo.dix  bidix-adpositions.todo.dix  bidix-collectives.todo.dix  bidix-conjunction.todo.dix  bidix-pcle.todo.dix  bidix-pronouns.todo.dix  bidix-props-freq-sorted.dix  bidix-props-no-corpus-hits.dix  bidix-shcmp.todo.dix  bidix-subjunction.todo.dix  bidix-suspicious-entries.todo.dix  cg-tag-convertor.py  compare-our-cg-with-gt.sh  dublettar.xml  fetch-and-build-hfst-vislcg3-apertium-sme-nob.sh  full-lexc.sh  generation-extract.sh  generation-grep.sh  generation-report.txt  generation-test.sh  gt-expand-to-bidix.sh  hashsme.analysert2.txt  inc-adj_meahttun.txt  inc-adv-fst_not_apert.txt  inc-cearpmat2012.txt  inc-new_smenob_nouns.txt  inc-problem.txt  inc-sme-nob-dic-adj.txt  (+42 more)
dev/archive/: apertium-sme-nob.sme-nob.lex  xfst2apertium.relabel  xfst2apertium.useless.twol
dev/archive/update-morph/: README  configure.ac  sme-nob-notrim.langs.cfg  sme-nob.langs.cfg
dev/blase-coverage/: Makefile  README  clean  diff-large-files.py  free_facta.amb.excluded  free_facta.cmp  free_facta.unk  make-diff  make-disam-files  run-sme-nob-until-disam  select-sem.cg3  tmx.cmp  tmx.unk  translations-test.amb.excluded  translations-test.cmp
dev/lex-tools/: Makefile  pct-split
dev/lists_from_corpus/: README.org  noun-det.cg3  only_forms_and_syntags.py  postproc  postproc-maydetind  run
dev/nouns-nob-sme/: apertium-sme-nob.nob-sme.rlx  apertium-sme-nob.nob-sme.t1x
dev/testvoc/: README.org  analyse-bidix  (+6 more)
devtexts/: README
gisting-eval/: 20bleu.txt  Makefile  README  dubestemmer.nob  index.php  laws.MT  masse.nob  randomise-create-phpgists.py  remake-translations-phpgists.sh
paper/: Makefile  apertium.bib  cslipubs-natbib.bst  cslipubs.sty  history.MT  history.nob  history.post-edited  history.res  history.sme  sme-nob.tex  story.MT  story.post-edited  story.res
pseudo_tmx_data/: 1NRKnews_sme2nob.tmx  2NRKnews_sme2nob.tmx  3NRKnews_sme2nob.tmx  4NRKnews_sme2nob.tmx  5NRKnews_sme2nob.tmx  NRKnews_sme2nob.tmx  samediggidiedadus_samegiela_birra_2012_sme2nob.tmx
t/: Pending_tests  Regression_tests  config.sh  latest-pending.results  latest-regression.results  lazytranslate  pending-tests  previous-offenders  regression-tests  translate.make  wiki-tests
test/: nob-sme-regression-generator-gold.txt  nob-sme-regression-input.txt  sme-nob-biltrans-expected.txt  sme-nob-chunker-expected.txt  sme-nob-disam-expected.txt  sme-nob-generator-expected.txt  sme-nob-generator-gold.txt  sme-nob-input.txt  sme-nob-interchunk2-expected.txt  sme-nob-lex-expected.txt  sme-nob-pending-biltrans-expected.txt  sme-nob-pending-chunker-expected.txt  sme-nob-pending-disam-expected.txt  sme-nob-pending-generator-expected.txt  sme-nob-pending-generator-gold.txt  sme-nob-pending-input.txt  sme-nob-pending-interchunk1-expected.txt  sme-nob-pending-interchunk2-expected.txt  sme-nob-pending-lex-expected.txt  sme-nob-pending-postchunk-expected.txt  sme-nob-pending-postgen-expected.txt  sme-nob-pending-pretransfer-expected.txt  sme-nob-pending-syntax-expected.txt  sme-nob-postchunk-expected.txt  sme-nob-postgen-expected.txt  sme-nob-regression-biltrans-expected.txt  sme-nob-regression-chunker-expected.txt  sme-nob-regression-generator-expected.txt  sme-nob-regression-generator-gold.txt  sme-nob-regression-input.txt  sme-nob-regression-interchunk1-expected.txt  sme-nob-regression-interchunk2-expected.txt  sme-nob-regression-lex-expected.txt  sme-nob-regression-postchunk-expected.txt  sme-nob-regression-postgen-expected.txt  sme-nob-regression-pretransfer-expected.txt  sme-nob-regression-syntax-expected.txt  sme-nob-rtx-input.txt  sme-nob-syntax-expected.txt  tests.json
texts/: NRK_Dimpas_sme.txt  NRKnews_mt2.txt  NRKnews_sme.txt  story.nob.txt  story.sme.txt
tmx_data/: NRK_aslaksen_sme2nob.tmx  NRK_avvujahki_sme2nob.tmx  NRK_bellodat.tmx  NRK_belusta_sme2nob.tmx  NRK_filippinene_sme2nob.tmx  NRK_girjecallit_sme2nob.tmx  NRK_hiljestv_sme2nob.tmx  NRK_konvensuvdna_sme2nob.tmx  NRK_lotto_sme2nob.tmx  NRK_nbr_sme2nob.tmx  NRK_oamastit_sme2nob.tmx  NRK_oddajagesardni_sme2nob.tmx  NRK_samekonvensuvdna_sme2nob.tmx  NRK_sme2nob.tmx  Olli_kronikk_sme2nob.tmx  aigi_soabadit_sme2nob.tmx  boazodoaluhahkan_sme2nob.tmx  boazopolitihkka_sme2nob.tmx  ealga_sme2nob.tmx  geaidnu_sme2nob.tmx  gilvu_sme2nob.tmx  kostra_sme2nob.tmx  mii_geavva_sme2nob.tmx  numeralsentences_sme2nob.tmx  pronouns_sme2nob.tmx  ruhtacoaggin_sme2nob.tmx  unnitruda_sme2nob.tmx
update-morph/: INSTALL  Makefile.am  README  autogen.sh  configure.ac  langs.cfg.in  liblt.py  libltpy.cpp  libltpy.hpp  notrim-langs.cfg.in  shortest-tag-match-in-bidix.sh  sme-nob-notrim.langs.cfg  sme-nob.langs.cfg  update-lexc.py
(+61 files in other folders)
